Auth halfway functional

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block content %}
 
 <div class="container bg-gray-100 m-auto text-center text-xl mt-16 p-16 border-orange-700 border-4 rounded-lg">
-    <h1 class="text-3xl mb-8"> Hello from home page I JUST CHANGED THIS</h1>
+    <h1 class="text-3xl mb-8"> Hello from the dashboard</h1>
   </div>
 
 {% endblock %}
