--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,16 @@
      <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css"  rel="stylesheet" />
      <script src="https://cdn.tailwindcss.com"></script>
      <script src="https://unpkg.com/htmx.org@2.0.0" integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" crossorigin="anonymous"></script>
+     <script>
+      htmx.onLoad(function(content) {
+          initFlowbite();
+      });
+    </script>
    </head>
 
    <!-- Nav Bar -->
 
-   <nav hx-boost="true" class="bg-white border-gray-200 dark:bg-gray-900">
+   <nav class="bg-white border-gray-200 dark:bg-gray-900">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
           <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
@@ -45,7 +50,7 @@
 
   <!-- Body Block -->
 
-   <body class="bg-gray-300" hx-boost="true">
+   <body class="bg-gray-300">
       <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script>
       <div id="content">
         {% block content %}
