95% done leaders test

--- a/templates/auth_templates/login.html
+++ b/templates/auth_templates/login.html
@@ -1,5 +1,5 @@
 
-{% extends "base.html" %}
+{% extends "../extensible_templates/nav_on_top.html" %}
 
 <!-- https://tailwindcomponents.com/components/sign-up-form -->
 
@@ -11,7 +11,7 @@
     <div class="container max-w-sm mx-auto flex-1 flex flex-col items-center justify-center px-2">
         <div class="bg-white px-6 py-8 rounded shadow-md text-black w-full">
             <h1 class="mb-8 text-3xl text-center">Login</h1>
-            <form method="post">
+            <form method="post" >
                 <input 
                     type="text"
                     class="block border border-grey-light w-full p-3 rounded mb-4"
@@ -43,7 +43,7 @@
 
         <div class="text-grey-dark mt-6">
             Don't have an account? 
-            <a class="no-underline border-b border-blue text-blue" href="/sign-up">
+            <a class="no-underline border-b border-blue text-blue" href="/sign-up" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML show:none">
                 Sign Up
             </a>.
         </div>
