--- a/templates/auth_templates/sign-up.html
+++ b/templates/auth_templates/sign-up.html
@@ -1,5 +1,5 @@
 
-{% extends "base.html" %}
+{% extends "../extensible_templates/nav_on_top.html" %}
 
 <!-- https://tailwindcomponents.com/components/sign-up-form -->
 <!-- TODO: Add live password match checking with htmx  -->
@@ -12,7 +12,7 @@
     <div class="container max-w-sm mx-auto flex-1 flex flex-col items-center justify-center px-2">
         <div class="bg-white px-6 py-8 rounded shadow-md text-black w-full">
             <h1 class="mb-8 text-3xl text-center">Sign up</h1>
-            <form method="post">
+            <form method="post" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML show:none" hx-push-url="true">
                 <input 
                     type="text"
                     class="block border border-grey-light w-full p-3 rounded mb-4"
@@ -61,7 +61,7 @@
 
         <div class="text-grey-dark mt-6">
             Already have an account? 
-            <a class="no-underline border-b border-blue text-blue" href="/login">
+            <a class="no-underline border-b border-blue text-blue" href="/login" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML show:none" hx-push-url="true">
                 Log in
             </a>.
         </div>
