--- a/templates/partial_templates/user_dropdown.html
+++ b/templates/partial_templates/user_dropdown.html
@@ -15,7 +15,7 @@
             </div>
             <ul class="py-2" aria-labelledby="user-menu-button">
                 <li>
-                <a href="/dashboard" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Dashboard</a>
+                <a href="/dashboard" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Dashboard</a>
                 </li>
                 <li>
                 <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">TBD</a>
@@ -29,7 +29,7 @@
 
 {% when None %}
     <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-        <a href="/login">
+        <a href="/login" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML show:none">
         <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign In/Sign Up</button>
         </a>    
     </div>
