--- a/templates/partial_templates/bonus_points.html
+++ b/templates/partial_templates/bonus_points.html
@@ -7,8 +7,8 @@
             <td class="py-2 px-4 border-b text-xl text-right">{{ bonus_item.label }}</td>
 
             <td class="py-2 px-4 border-b text-center">
-                <input type="checkbox" name="{{ bonus_item.label|lower|replace(" ", "_") }}" value="{{ bonus_item.points }}" id="{{ bonus_item.label|lower|replace(" ", "_") }}" class="hidden peer" required>
-                <label for="{{ bonus_item.label|lower|replace(" ", "_") }}" class="inline-flex items-center justify-center w-full h-12 p-2 text-sm font-medium text-gray-900 bg-white border-2 border-gray-300 rounded-lg cursor-pointer peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-transparent">
+                <input type="checkbox" name="bonus--{{ bonus_item.label|lower|replace(" ", "_") }}" value="{{ bonus_item.points }}" id="bonus--{{ bonus_item.label|lower|replace(" ", "_") }}" class="hidden peer">
+                <label for="bonus--{{ bonus_item.label|lower|replace(" ", "_") }}" class="inline-flex items-center justify-center w-full h-12 p-2 text-sm font-medium text-gray-900 bg-white border-2 border-gray-300 rounded-lg cursor-pointer peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-transparent">
                     + {{ bonus_item.points }}
                 </label>
             </td>
