--- a/templates/extensible_templates/base.html
+++ b/templates/extensible_templates/base.html
@@ -4,18 +4,38 @@
  <!doctype html>
  <html lang="en">
    <head>
+
+      <!-- Title Block -->
       <title>{% block title %}{% endblock %}</title>
+
      <meta charset="UTF-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css"  rel="stylesheet" />
      <script src="https://cdn.tailwindcss.com"></script>
      <script src="https://unpkg.com/htmx.org@2.0.0" integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" crossorigin="anonymous"></script>
+     <script>
+      htmx.onLoad(function(content) {
+          initFlowbite();
+      });
+    </script>
    </head>
-   <body class="bg-gray-300">
+
+   <body>
       <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script>
-      <div id="content">
+
+      <!-- Navbar Block -->
+      {% block navbar %}
+      {% endblock %}
+
+      <!-- Content Block -->
+      <div id="primary-content">
         {% block content %}
         {% endblock %}
       </div>
    </body>
  </html>
+
+
+ 
+
+
