--- a/templates/primary_templates/dancer_test.html
+++ b/templates/primary_templates/dancer_test.html
@@ -1,11 +1,11 @@
 {% extends "./extensible_templates/nav_on_top.html" %}
 
-{% block title %}Leader Test{% endblock %}
+{% block title %}{{ test_type|capitalize }} Test{% endblock %}
 
 {% block content %}
 <body>
     <div class="container mx-auto p-4">
-        <h2 class="text-4xl font-bold mb-4 text-center">Dance Moves Points Form</h2>
+        <h2 class="text-4xl font-bold mb-4 text-center">{{ test_type|capitalize }} Advancement Test</h2>
         <form method="post" class="bg-white p-6 rounded shadow-md">
 
             <!-- User Info Section -->
