descriptive techniques added

--- a/templates/auth_templates/sign-up.html
+++ b/templates/auth_templates/sign-up.html
@@ -61,7 +61,7 @@
 
         <div class="text-grey-dark mt-6">
             Already have an account? 
-            <a class="no-underline border-b border-blue text-blue" href="/login" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML show:none" hx-push-url="true">
+            <a class="no-underline border-b border-blue text-blue" href="/login" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML show:none">
                 Log in
             </a>.
         </div>
