--- a/templates/extensible_templates/nav_on_top.html
+++ b/templates/extensible_templates/nav_on_top.html
@@ -1,20 +1,34 @@
 {% extends "base.html" %}
 
 {% block navbar %}
-   <nav class="bg-white border-gray-200 dark:bg-gray-900">
+   <nav class="bg-white border-gray-200 dark:bg-primary-500">
+    
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-      <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+      
+      <!-- Logo -->
+
+      <a href="#" class="flex items-center space-x-3">
           <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
           <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Dancexam</span>
       </a>
-      <button data-collapse-toggle="navbar-user" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-user" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-        </svg>
-      </button>
-      <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse" hx-get="/private/user-dropdown" hx-trigger="load"></div>
-      <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-user">
+
+      <div class="flex md:order-last">
+        <!-- Link Hamburger (mob/sm)  -->
+
+        <button data-collapse-toggle="navbar-user" type="button" class="inline-flex items-center p-2 mr-4 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-user" aria-expanded="false">
+          <span class="sr-only">Open main menu</span>
+          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+          </svg>
+        </button>
+
+        <!-- Sign-In/Up Button or User Dropdown -->
+        <div class="flex items-center space-x-3 md:space-x-0" hx-get="/private/user-dropdown" hx-trigger="load"></div>
+      </div>
+
+      <!-- Column/Row of Links (col -- mob/sm // row -- md+) -->
+
+      <div class="items-center justify-between hidden w-full md:flex md:w-auto" id="navbar-user">
         <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
           <li>
             <a 
@@ -28,6 +42,7 @@
           </li>
         </ul>
       </div>
+
     </div>
   </nav>
 
