--- a/templates/partial_templates/user_dropdown.html
+++ b/templates/partial_templates/user_dropdown.html
@@ -18,7 +18,7 @@
                 <a href="/dashboard" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Dashboard</a>
                 </li>
                 <li>
-                <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">TBD</a>
+                <a href="/search-testee" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Search Testee</a>
                 </li>
             </ul>
             <div class="py-2">
