--- a/templates/partial_templates/pattern_scoring.html
+++ b/templates/partial_templates/pattern_scoring.html
@@ -1,14 +1,14 @@
-<table class="min-w-full bg-white">
+<table class="bg-white w-full mx-1 table-fixed">
     <h2 class="text-2xl font-bold py-4 px-4 border-b-2 text-center">Pattern Scoring</h2>
 
     <!-- Label the Scoring Categories -->
     <thead>
         <tr>
             <!-- Empty Padding to Align Everything -->
-            <th></th>
+            <th class="w-1/4"</th>
 
             {% for scoring_category in pattern_scoring_categories %}
-                <th colspan="{{ scoring_category.points.len() }}">
+                <th class="lg:text-2xl" colspan="{{ scoring_category.points.len() }}">
                     {{ scoring_category.name }}
                 </th>
             {% endfor %}
@@ -20,13 +20,13 @@
         {% for pattern in patterns %}
         <tr>
             <!-- Add the Pattern Name to the Left Column -->
-            <td class="py-2 px-4 border-b text-xl text-right">{{ pattern }}</td>
+            <td class="py-2 px-4 border-b font-bold sm:text-sm md:text-xl lg:text-2xl text-right">{{ pattern }}</td>
 
             <!-- Add radio buttons for each scoring category -->
             {% for scoring_category in pattern_scoring_categories %}
                 {% for point in scoring_category.points %}
                     <!-- Add a border between scoring catergories for comprehension -->
-                    <td class="py-2 px-4 border-b text-center {% if loop.last %}border-r border-gray-300 last:border-0{% else %}{% endif %}">
+                    <td class="py-2 px-1 w-full border-b text-center {% if loop.last %}border-r border-gray-300 last:border-0{% else %}{% endif %}">
                         <input 
                             type="radio" 
                             name="pattern--{{ pattern|lower|replace(" ", "_") }}--scoring_category--{{ scoring_category.name|lower|replace(" ", "_") }}--max_score--{{ scoring_category.max_score }}" 
