--- a/templates/partial_templates/technique_scoring.html
+++ b/templates/partial_templates/technique_scoring.html
@@ -1,12 +1,13 @@
-<table class="min-w-full bg-white">
+<table class="bg-white w-full mx-1 table-fixed">
     <!-- Add the labels for the % of the dance that each technique must be present -->
     <thead>
         <tr>
             <!-- Blank header to properly align everything -->
-            <th></th>
+            <th class="w-1/5"></th>
             {% for header in technique_group.technique_headers %}
-                <th>{{ header }}</th>   
+                <th class=" break-words sm:text-xs lg:text-base xl:text-2xl">{{ header }}</th>   
             {% endfor %}
+            <th class="w-[15%]"></th>
         </tr>
     </thead>
     <!-- Add each of the individual techniques -->
@@ -15,11 +16,11 @@
         <tr>
             
             <!-- Technique Name and Label On Left -->
-            <td class="py-2 px-4 border-b text-xl text-right">{{ technique.name }} {{ technique.subtext }}</td>
+            <td class="py-2 px-4 border-b sm:text-xs md:text-base lg:text-xl xl:text-2xl font-bold text-right">{{ technique.name }}<br><span class="text-xs lg:text-base text-gray-400 font-normal">{{ technique.subtext }}</span></td>
 
             <!-- Technique Point Values: Assumes that technique.points is always as long as technique headers -->
             {% for point in technique.points %}
-            <td class="py-2 px-4 border-b text-center">
+            <td class="py-2 px-1 w-full border-b text-center">
                 <!-- 
                 name: for radio buttons have to all be the same (that is what lets the rendered know only one of each radio can be selected), this is what gets sent with the form as the key
                 id: must be unique for each element
@@ -34,16 +35,14 @@
                 >
                 <label 
                     for="technique--{{ technique.name|lower|replace(" ", "_") }}--rating--{{ technique_group.technique_headers[loop.index0] }}--points--{{ point }}"
-                    class="inline-flex items-center justify-center w-16 h-12 p-2 text-sm font-medium text-gray-900 bg-white border-2 border-gray-300 rounded-lg cursor-pointer peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-transparent"
+                    class="inline-flex items-center justify-center w-full h-12 p-2 text-sm font-medium text-gray-900 bg-white border-2 border-gray-300 rounded-lg cursor-pointer peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-transparent"
                 >
                     {{ point }}
                 </label>
             </td>
             {% endfor %}
 
-
-
-            <td class="py-2 px-4 border-b text-xl text-right">{{ technique.antithesis }}</td>
+            <td class="py-2 px-4 border-b sm:text-xs text-left break-words">{{ technique.antithesis }}</td>
         </tr>
         {% endfor %}
     </tbody>
