--- a/templates/partial_templates/testee_info.html
+++ b/templates/partial_templates/testee_info.html
@@ -3,19 +3,19 @@
     <h2 class="text-2xl font-bold py-4 px-4 border-b-2 text-center">Personal Information</h2>
     <!-- First Name -->
     <div class="flex flex-col">
-        <label for="first_name" class="text-sm font-medium text-gray-700">First Name</label>
-        <input type="text" id="first_name" name="first_name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
+        <label for="first_name" class="text-base md:text-lg font-medium text-gray-700">First Name</label>
+        <input type="text" id="first_name" name="first_name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" required>
     </div>
 
     <!-- Last Name -->
     <div class="flex flex-col">
-        <label for="last_name" class="text-sm font-medium text-gray-700">Last Name</label>
-        <input type="text" id="last_name" name="last_name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
+        <label for="last_name" class="text-base md:text-lg font-medium text-gray-700">Last Name</label>
+        <input type="text" id="last_name" name="last_name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" required>
     </div>
 
     <!-- Email Address -->
     <div class="flex flex-col">
-        <label for="email" class="text-sm font-medium text-gray-700">Email Address</label>
-        <input type="email" id="email" name="email" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
+        <label for="email" class="text-base md:text-lg font-medium text-gray-700">Email Address</label>
+        <input type="email" id="email" name="email" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500" required>
     </div>
 </div>
