--- a/templates/primary_templates/dancer_test.html
+++ b/templates/primary_templates/dancer_test.html
@@ -4,7 +4,15 @@
 
 {% block content %}
 <body>
-    <div class="container mx-auto p-4">
+
+    <!-- Tiny Screen Warning -->
+    <div class="sm:hidden mx-4 mt-4 p-4 border border-gray-300 rounded-lg shadow-lg bg-gray-100">
+        <h1 class="text-xl font-semibold text-gray-700 mb-2">Screen Too Small</h1>
+        <p class="text-gray-600">For the best experience, please use a larger screen or switch to landscape mode on your mobile device.</p>
+    </div>
+
+
+    <div class="mx-auto p-4 hidden sm:block">
         <h2 class="text-4xl font-bold mb-4 text-center">{{ test_type|capitalize }} Advancement Test</h2>
         <form method="post" class="bg-white p-6 rounded shadow-md">
 
