--- a/templates/extensible_templates/base.html
+++ b/templates/extensible_templates/base.html
@@ -11,7 +11,7 @@
      <meta charset="UTF-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <link href="/static/css/output.css" rel="stylesheet">
-     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css"  rel="stylesheet" />
+     <link href="/static/css/flowbite.v251.min.css"  rel="stylesheet" />
      <script src="/static/js/htmx.v202.min.js"></script>
      <script>
       htmx.onLoad(function(content) {
@@ -37,7 +37,7 @@
    </head>
 
    <body>
-      <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script>
+      <script src="/static/js/flowbite.v251.min.js"></script>
 
       <!-- Navbar Block -->
       {% block navbar %}
