--- a/templates/primary_templates/dashboard.html
+++ b/templates/primary_templates/dashboard.html
@@ -4,17 +4,22 @@
 
 {% block content %}
 
-<div class="container bg-gray-100 m-auto text-center text-xl mt-16 p-16 border-orange-700 border-4 rounded-lg">
-    <h1 class="text-3xl mb-8"> Hello from the dashboard</h1>
+
+<div class="text-center mt-2 mx-2 border-gray-100 bg-gray-300 shadow-lg rounded-lg overflow-hidden md:p-2">
+  <h1 class="py-2 text-2xl font-bold">Test Administration</h1>
+  <div class="md:flex md:mb-2">
+    <a href="/leader-test" class="md:flex-1 md:rounded-lg md:overflow-hidden md:mx-2 md:shadow">
+      <h5 class="bg-gray-500 py-6 font-bold text-xl">Leader Test</h5>
+    </a>  
+    <a href="/follower-test" class="md:flex-1 md:rounded-lg md:overflow-hidden md:mx-2 md:shadow">
+      <h5 class="bg-gray-500 py-6 font-bold text-xl">Follower Test</h5>
+    </a> 
+  </div> 
 </div>
 
-<div class="container m-auto mt-16 p-16 rounded-lg">
-  <a href="/leader-test" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Administer Leader Test</h5>
-  </a>  
+<div hx-get="/search-testee" hx-select="#search-testee-widget" hx-swap="outerHTML" hx-trigger="load"></div>
 
-  <a href="/follower-test" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Administer Follower Test</h5>
-  </a>  
-</div>
+
+
+
 {% endblock %}
