--- a/templates/primary_templates/search_testee.html
+++ b/templates/primary_templates/search_testee.html
@@ -4,19 +4,34 @@
 
 {% block content %}
 
-<h1>Search Testees</h1>
-<form action="/search-testee" method="post">
-    <label for="query">Search:</label>
-    <input type="text" id="query" name="query">
-    <button type="submit">Search</button>
-</form>
+<div id="search-testee-widget" class="text-center mt-2 mx-2 border-gray-100 bg-gray-300 shadow-lg rounded-lg overflow-hidden md:p-2">
+    <h1 class="py-2 text-2xl font-bold">Search Testees</h1>
+    <form action="/search-testee" method="GET" hx-boost="true" hx-select="#search-results" hx-target="#search-results" hx-swap="outerHTML" >
+        <label for="query" class="sr-only">Search:</label>
+        <input 
+          type="text" 
+          id="query" 
+          name="query" 
+          class="border rounded px-2 py-1"
+          placeholder="Enter search term"
+        >
+        <button 
+          type="submit" 
+          class="bg-blue-500 text-white px-4 py-2 rounded ml-2"
+        >
+          Search
+        </button>
+    </form>
+
+
+
 
 {% match search_results %}
 
     {% when Some with (data) %}
 
     <div id="search-results">
-        <h2>Results</h2>
+        <h2 class="py-2 text-xl font-bold">Results</h2>
         <ul>
             {% for testee in data %}
                 <a href="/test-summaries/{{ testee.id }}">
@@ -30,5 +45,7 @@
         <div id="search-results"></div>
 
 {% endmatch %}
+
+</div>
 
 {% endblock %}
