--- a/templates/extensible_templates/nav_on_top.html
+++ b/templates/extensible_templates/nav_on_top.html
@@ -7,8 +7,8 @@
       
       <!-- Logo -->
 
-      <a href="#" class="flex items-center space-x-3">
-          <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
+      <a href="/" class="flex items-center space-x-3">
+          <img src="/static/images/dancexam_thumbnail_2.webp" class="h-8 rounded-full" alt="Dancexam Logo" />
           <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Dancexam</span>
       </a>
 
@@ -29,20 +29,20 @@
       <!-- Column/Row of Links (col -- mob/sm // row -- md+) -->
 
       <div class="items-center justify-between hidden w-full md:flex md:w-auto" id="navbar-user">
-        <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-white md:space-x-8 md:flex-row md:mt-0 md:border-0 md:bg-gray-900">
+        <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border-4 border-gray-100 rounded-lg md:space-x-8 md:flex-row md:mt-0 md:border-0 bg-gray-900">
           <li>
             <a 
               href="/" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML" 
-              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0" 
+              class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0" 
               aria-current="page">
               Home
             </a>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">About</a>
+            <a href="/dashboard" class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0">Dashboard</a>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Contact</a>
+            <a href="/contact" class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0">Contact</a>
           </li>
         </ul>
       </div>
@@ -51,5 +51,3 @@
   </nav>
 
 {% endblock %}
-
-
