--- a/templates/primary_templates/graded_test.html
+++ b/templates/primary_templates/graded_test.html
@@ -8,31 +8,34 @@
 
 {% when Some with (data) %}
 
-        <div class="container mx-auto bg-white p-6 rounded shadow-md">
-            <h1 class="text-3xl font-bold mb-6">Graded Test Results</h1>
+        <div class="text-center bg-white">
+            <h1 class="text-3xl font-bold my-6">Graded Test Results</h1>
 
-            <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
+            <div class="overflow-x-auto text-center mt-4 mx-4 border-gray-100 bg-gray-50 shadow-lg rounded-lg p-6 hover:bg-gray-100 hover:shadow-xl transition duration-300">
                 <h2 class="text-2xl font-semibold">Testee Information</h2>
                 <p><strong>Name:</strong> {{ data.testee.first_name }} {{ data.testee.last_name }}</p>
                 <p><strong>Email:</strong> {{ data.testee.email }}</p>
-                <p><strong>Test Date:</strong> {{ data.test_date }}</p>
+                <p><strong>Test Date:</strong> {{ data.test_date|trim_end_chars(10) }}</p>
                 <p><strong>Test Type:</strong> {{ data.test_type|capitalize }}</p>
             </div>
 
-            <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
-                <h2 class="text-2xl font-semibold">Scores</h2>
-                <p><strong>Score:</strong> {{ data.score }}</p>
+            {% if data.score > data.passing_score %}
+                <div class="bg-green-100 hover:bg-green-200 text-center mt-4 mx-4 border-gray-100 shadow-lg rounded-lg p-6 hover:shadow-xl transition duration-300">
+            {% else %}
+                <div class="bg-red-100 hover:bg-red-200 text-center mt-4 mx-4 border-gray-100 shadow-lg rounded-lg p-6 hover:shadow-xl transition duration-300">
+            {% endif %}
+                <h2 class="text-2xl font-semibold">Scoring Information</h2>
+                <p><strong>Score:</strong> {{ data.score }} / {{ data.max_score }}</p>
                 <p><strong>Passing Score:</strong> {{ data.passing_score }}</p>
-                <p><strong>Max Score:</strong> {{ data.max_score }}</p>
             </div>
 
-            <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
+            <div class="overflow-x-auto text-center mt-4 mx-4 border-gray-100 bg-gray-50 shadow-lg rounded-lg p-6 hover:bg-gray-100 hover:shadow-xl transition duration-300">
                 <h2 class="text-2xl font-semibold">Patterns</h2>
-                <table id="patterns-table" class="min-w-full bg-white">
+                <table id="patterns-table" class="min-w-full bg-gray-100 overflow-hidden rounded-lg mt-2">
                     <thead>
                         <tr>
                             <th scope="col" class="px-6 py-3" onclick="sortTable('patterns-table', 0)">
-                                <div class="flex items-center text-center">
+                                <div class="flex items-center text-center justify-center">
                                     Pattern
                                     <a href="#">
                                         <svg class="w-3 h-3 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
@@ -42,7 +45,7 @@
                                 </div>
                             </th>
                             <th scope="col" class="px-6 py-3" onclick="sortTable('patterns-table', 1)">
-                                <div class="flex items-center text-center">
+                                <div class="flex items-center text-center justify-center">
                                     Category
                                     <a href="#">
                                         <svg class="w-3 h-3 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
@@ -52,7 +55,7 @@
                                 </div>
                             </th>
                             <th scope="col" class="px-6 py-3" onclick="sortTable('patterns-table', 2)">
-                                <div class="flex items-center text-center">
+                                <div class="flex items-center text-center justify-center">
                                     Score
                                     <a href="#">
                                         <svg class="w-3 h-3 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
@@ -62,7 +65,7 @@
                                 </div>
                             </th>
                             <th scope="col" class="px-6 py-3" onclick="sortTable('patterns-table', 3)">
-                                <div class="flex items-center text-center">
+                                <div class="flex items-center text-center justify-center">
                                     Max Score
                                     <a href="#">
                                         <svg class="w-3 h-3 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
@@ -86,15 +89,51 @@
                 </table>
             </div>
 
-            <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
+            <div class="overflow-x-auto text-center mt-4 mx-4 border-gray-100 bg-gray-50 shadow-lg rounded-lg p-6 hover:bg-gray-100 hover:shadow-xl transition duration-300">
                 <h2 class="text-2xl font-semibold">Techniques</h2>
-                <table id="techniques-table" class="min-w-full bg-white">
+                <table id="techniques-table" class="min-w-full bg-gray-100 overflow-hidden rounded-lg mt-2">
                     <thead>
                         <tr>
-                            <th class="py-2 px-4 border-b text-center" onclick="sortTable('techniques-table', 0)">Technique</th>
-                            <th class="py-2 px-4 border-b text-center" onclick="sortTable('techniques-table', 1)">Score</th>
-                            <th class="py-2 px-4 border-b text-center" onclick="sortTable('techniques-table', 2)">Score Header</th>
-                            <th class="py-2 px-4 border-b text-center" onclick="sortTable('techniques-table', 3)">Max Score</th>
+                            <th class="py-2 px-4 border-b text-center" onclick="sortTable('techniques-table', 0)">
+                                <div class="flex items-center text-center justify-center">
+                                    Technique
+                                    <a href="#">
+                                        <svg class="w-3 h-3 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+                                            <path d="M8.574 11.024h6.852a2.075 2.075 0 0 0 1.847-1.086 1.9 1.9 0 0 0-.11-1.986L13.736 2.9a2.122 2.122 0 0 0-3.472 0L6.837 7.952a1.9 1.9 0 0 0-.11 1.986 2.074 2.074 0 0 0 1.847 1.086Zm6.852 1.952H8.574a2.072 2.072 0 0 0-1.847 1.087 1.9 1.9 0 0 0 .11 1.985l3.426 5.05a2.123 2.123 0 0 0 3.472 0l3.427-5.05a1.9 1.9 0 0 0 .11-1.985 2.074 2.074 0 0 0-1.846-1.087Z"/>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </th>
+                            <th class="py-2 px-4 border-b text-center" onclick="sortTable('techniques-table', 1)">
+                                <div class="flex items-center text-center justify-center">
+                                    Score
+                                    <a href="#">
+                                        <svg class="w-3 h-3 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+                                            <path d="M8.574 11.024h6.852a2.075 2.075 0 0 0 1.847-1.086 1.9 1.9 0 0 0-.11-1.986L13.736 2.9a2.122 2.122 0 0 0-3.472 0L6.837 7.952a1.9 1.9 0 0 0-.11 1.986 2.074 2.074 0 0 0 1.847 1.086Zm6.852 1.952H8.574a2.072 2.072 0 0 0-1.847 1.087 1.9 1.9 0 0 0 .11 1.985l3.426 5.05a2.123 2.123 0 0 0 3.472 0l3.427-5.05a1.9 1.9 0 0 0 .11-1.985 2.074 2.074 0 0 0-1.846-1.087Z"/>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </th>
+                            <th class="py-2 px-4 border-b text-center" onclick="sortTable('techniques-table', 2)">
+                                <div class="flex items-center text-center justify-center">
+                                    Grade Comment
+                                    <a href="#">
+                                        <svg class="w-3 h-3 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+                                            <path d="M8.574 11.024h6.852a2.075 2.075 0 0 0 1.847-1.086 1.9 1.9 0 0 0-.11-1.986L13.736 2.9a2.122 2.122 0 0 0-3.472 0L6.837 7.952a1.9 1.9 0 0 0-.11 1.986 2.074 2.074 0 0 0 1.847 1.086Zm6.852 1.952H8.574a2.072 2.072 0 0 0-1.847 1.087 1.9 1.9 0 0 0 .11 1.985l3.426 5.05a2.123 2.123 0 0 0 3.472 0l3.427-5.05a1.9 1.9 0 0 0 .11-1.985 2.074 2.074 0 0 0-1.846-1.087Z"/>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </th>
+                            <th class="py-2 px-4 border-b text-center" onclick="sortTable('techniques-table', 3)">
+                                <div class="flex items-center text-center justify-center">
+                                    Max Score
+                                    <a href="#">
+                                        <svg class="w-3 h-3 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+                                            <path d="M8.574 11.024h6.852a2.075 2.075 0 0 0 1.847-1.086 1.9 1.9 0 0 0-.11-1.986L13.736 2.9a2.122 2.122 0 0 0-3.472 0L6.837 7.952a1.9 1.9 0 0 0-.11 1.986 2.074 2.074 0 0 0 1.847 1.086Zm6.852 1.952H8.574a2.072 2.072 0 0 0-1.847 1.087 1.9 1.9 0 0 0 .11 1.985l3.426 5.05a2.123 2.123 0 0 0 3.472 0l3.427-5.05a1.9 1.9 0 0 0 .11-1.985 2.074 2.074 0 0 0-1.846-1.087Z"/>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </th>
                         </tr>
                     </thead>
                     <tbody>
@@ -110,20 +149,38 @@
                 </table>
             </div>
 
-            <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
+            <div class="overflow-x-auto text-center mt-4 mx-4 border-gray-100 bg-gray-50 shadow-lg rounded-lg p-6 hover:bg-gray-100 hover:shadow-xl transition duration-300">
                 <h2 class="text-2xl font-semibold">Bonus Points</h2>
-                <table id="bonuses-table" class="min-w-full bg-white">
+                <table id="bonuses-table" class="min-w-full bg-gray-100 overflow-hidden rounded-lg mt-2">
                     <thead>
                         <tr>
-                            <th class="py-2 px-4 border-b text-center" onclick="sortTable('bonuses-table', 0)">Bonus Point</th>
-                            <th class="py-2 px-4 border-b text-center" onclick="sortTable('bonuses-table', 1)">Score</th>
+                            <th class="py-2 px-4 border-b text-center" onclick="sortTable('bonuses-table', 0)">
+                                <div class="flex items-center text-center justify-center">
+                                    Bonus Point
+                                    <a href="#">
+                                        <svg class="w-3 h-3 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+                                            <path d="M8.574 11.024h6.852a2.075 2.075 0 0 0 1.847-1.086 1.9 1.9 0 0 0-.11-1.986L13.736 2.9a2.122 2.122 0 0 0-3.472 0L6.837 7.952a1.9 1.9 0 0 0-.11 1.986 2.074 2.074 0 0 0 1.847 1.086Zm6.852 1.952H8.574a2.072 2.072 0 0 0-1.847 1.087 1.9 1.9 0 0 0 .11 1.985l3.426 5.05a2.123 2.123 0 0 0 3.472 0l3.427-5.05a1.9 1.9 0 0 0 .11-1.985 2.074 2.074 0 0 0-1.846-1.087Z"/>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </th>
+                            <th class="py-2 px-4 border-b text-center" onclick="sortTable('bonuses-table', 1)">
+                                <div class="flex items-center text-center justify-center">
+                                    Score
+                                    <a href="#">
+                                        <svg class="w-3 h-3 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+                                            <path d="M8.574 11.024h6.852a2.075 2.075 0 0 0 1.847-1.086 1.9 1.9 0 0 0-.11-1.986L13.736 2.9a2.122 2.122 0 0 0-3.472 0L6.837 7.952a1.9 1.9 0 0 0-.11 1.986 2.074 2.074 0 0 0 1.847 1.086Zm6.852 1.952H8.574a2.072 2.072 0 0 0-1.847 1.087 1.9 1.9 0 0 0 .11 1.985l3.426 5.05a2.123 2.123 0 0 0 3.472 0l3.427-5.05a1.9 1.9 0 0 0 .11-1.985 2.074 2.074 0 0 0-1.846-1.087Z"/>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for bonus in data.bonuses %}
                         <tr>
                             <td class="py-2 px-4 border-b text-center">{{ bonus.name }}</td>
-                            <td class="py-2 px-4 border-b text-center">{{ bonus.score }}</td>
+                            <td class="py-2 px-4 border-b text-center">+{{ bonus.score }}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -167,4 +224,3 @@
 {% endmatch %}
 
 {% endblock %}
-
